[gd_scene load_steps=4 format=3 uid="uid://dt5dabw0ggrgp"]

[ext_resource type="Script" path="res://addons/node_brush/params.gd" id="1"]

[sub_resource type="ButtonGroup" id="ButtonGroup_ct86h"]

[sub_resource type="ButtonGroup" id="ButtonGroup_2a0qa"]

[node name="Params" type="PopupPanel"]
size = Vector2i(256, 152)
visible = true
script = ExtResource("1")

[node name="Content" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0

[node name="Scene" type="HBoxContainer" parent="Content"]
layout_mode = 2

[node name="SceneCheck" type="CheckBox" parent="Content/Scene"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_ct86h")
text = "Scene"

[node name="SceneSelect" type="Button" parent="Content/Scene"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Select a scene from the project file system."
text = "Select..."

[node name="Node" type="HBoxContainer" parent="Content"]
layout_mode = 2

[node name="NodeCheck" type="CheckBox" parent="Content/Node"]
unique_name_in_owner = true
layout_mode = 2
button_group = SubResource("ButtonGroup_ct86h")
text = "Node"

[node name="NodeCopy" type="Button" parent="Content/Node"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Copy the currently selected node to the \"clipboard\"."
disabled = true
text = "Copy"

[node name="HSeparator" type="HSeparator" parent="Content"]
layout_mode = 2

[node name="AddChild" type="CheckBox" parent="Content"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_2a0qa")
text = "Add Child"

[node name="AddSibling" type="CheckBox" parent="Content"]
unique_name_in_owner = true
layout_mode = 2
button_group = SubResource("ButtonGroup_2a0qa")
text = "Add Sibling"

[connection signal="pressed" from="Content/Scene/SceneSelect" to="." method="_on_scene_select_pressed"]
[connection signal="pressed" from="Content/Node/NodeCopy" to="." method="_on_node_copy_pressed"]
